5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1756_672.log
== SUBMITION (2019-05-22 14:01:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(dtype("Insira a quantidade de posições: ")))
v = ones(n)
print(v)

-- EXECUTION TIME:
0.558899
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/672/main.py", line 3, in <module>
    n = array(eval(dtype("Insira a quantidade de posi\xe7\xf5es: ")))
TypeError: data type not understood

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:01:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(dtype("Insira a quantidade de posições: ")))
v = ones(n)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:02:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: ", dtype))
v = ones(n)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:02:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: ", dtype))
v = ones(n)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:02:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: ")))
v = ones(n)
print(v)

-- ERROR:
File "XXXX", line 3
    n = array(eval("Insira a quantidade de posições: ")))
                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:02:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: ")))
v = ones(n)
print(v)

-- EXECUTION TIME:
0.182989
-- ERROR:
  File "/home/codebench/codes/1756/672/main.py", line 3
    n = array(eval("Insira a quantidade de posi\xe7\xf5es: ")))
                                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:03:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: "))
v = ones(n, dtype)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:03:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira quantidade de posições: "))
v = ones(n, dtype)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:04:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: "))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:04:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: "))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:04:38) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: "))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:04:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: "))
v = ones(n, dtype=int)
print(v)

-- EXECUTION TIME:
1.92397
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/672/main.py", line 3, in <module>
    n = array(eval("Insira a quantidade de posi\xe7\xf5es: "))
  File "<string>", line 1
    Insira a quantidade de posi\xe7\xf5es: 
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:04:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: "))
v = ones(n, dtype=int)
print(v)

-- EXECUTION TIME:
1.87201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/672/main.py", line 3, in <module>
    n = array(eval("Insira a quantidade de posi\xe7\xf5es: "))
  File "<string>", line 1
    Insira a quantidade de posi\xe7\xf5es: 
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:04:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval("Insira a quantidade de posições: "))
v = ones(n, dtype=int)
print(v)

-- EXECUTION TIME:
2.10492
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/672/main.py", line 3, in <module>
    n = array(eval("Insira a quantidade de posi\xe7\xf5es: "))
  File "<string>", line 1
    Insira a quantidade de posi\xe7\xf5es: 
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:05:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = ones(6, dtype=int)
print(v)

-- EXECUTION TIME:
0.489972
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:05:42) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = ones(6, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:05:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = ones(6, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:05:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = ones(6, dtype=int)
print(v)

-- EXECUTION TIME:
0.407339
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:05:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

v = ones(6, dtype=int)
print(v)

-- EXECUTION TIME:
0.608103
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:06:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("Insira a quantidade de posicoes: ")))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:06:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("Insira a quantidade de posicoes: ")))
v = ones(n, dtype=int)
print(v)

-- EXECUTION TIME:
0.405685
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:48:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("Insira a quantidade de posicoes: ")))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:48:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("Insira a quantidade de posicoes: ")))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 08:48:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("Insira a quantidade de posicoes: ")))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 08:48:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array(eval(input("Insira a quantidade de posicoes: ")))
v = ones(n, dtype=int)
print(v)

-- EXECUTION TIME:
16.535
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
Insira a quantidade de posicoes: [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
Insira a quantidade de posicoes: [1 1 1 1 1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:55:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("Insira a quantidade de posicoes: "))
v = ones(n, dtype=int)
print(v)

-- EXECUTION TIME:
0.46073
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:40:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("Insira a quantidade de posicoes: "))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:40:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("Insira a quantidade de posicoes: "))
v = ones(n, dtype=int)
print(v)

-- EXECUTION TIME:
0.378753
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:42:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("Insira a quantidade de posicoes: "))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:43:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("Insira a quantidade de posicoes: "))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:43:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("Insira a quantidade de posicoes: "))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:43:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = int(input("Insira a quantidade de posicoes: "))
v = ones(n, dtype=int)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
